# redc

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: before-all.sh  build_wheels.yml
.github/workflows/scripts/: before-all-linux.sh  before-all-macos.sh  before-all-windows.sh
redc/: __init__.py  _version.py  client.py  response.py
redc/exceptions/: __init__.py
redc/ext/: redc.cpp  redc.h  request_builder.cpp  request_builder.h  url.cpp
redc/ext/utils/: memoryview.h  py_utils.h
redc/utils/: __init__.py  headers.py  json_encoder.py
tests/: conftest.py  test_auth.py  test_callbacks.py  test_client_lifecycle.py  test_compression.py  test_concurrency.py  test_content.py  test_cookies.py  test_curl_url.py  test_data.py  test_exceptions.py  test_files.py  test_headers.py  test_json.py  test_params.py  test_raise_for_status.py  test_redirects.py  test_request_generic.py  test_response.py  test_streaming.py  test_timeouts.py  test_verbs.py
